add updated index site

--- a/views/index.twig
+++ b/views/index.twig
@@ -3,33 +3,45 @@
 <head>
     <meta charset="utf-8" />
     <title>is it Pomodoro break?</title>
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <!--[if lte IE 9]><link rel="stylesheet" href="css/ie.css" type="text/css" media="screen" /><![endif]-->
-
     <link rel="stylesheet" href="css/1140.css" type="text/css" media="screen" />
-
     <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" />
-
+    <link rel="shortcut icon" href="/img/icon-pomodoro.png" type="image/png" />
     <script type="text/javascript" src="js/css3-mediaqueries.js"></script>
-
-    <style type="text/css">
-
-        body {
-            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-        }
-
-        .container p {
-            color: #fff;
-            line-height: 100px;
-            background: #000;
-            text-align: center;
-            margin: 20px 0 0 0;
-        }
-    </style>
 </head>
 <body>
-isitpomodorobreak.com
+<div class="container">
+    <div class="row">
+        <div class="twelvecol last">
+            <h1>... is it <span class="red">Pomodoro</span> break?</h1>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="twelvecol last">
+            <h2>Yes</h2>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="fourcol">
+            <h3><img src="/img/icon-pomodoro.png" /> The Pomodoro Technique</h3>
+            <p><a href="http://www.pomodorotechnique.com/">The Pomodoro Technique®</a> created by Francesco Cirillo in the 1980s is a way to get the most out of time management.
+                It is practiced by professional teams and individuals around the world.</p>
+        </div>
+        <div class="fourcol">
+            <h3><img src="/img/icon-about.png" /> About isitpomodorobreak.com</h3>
+            <p>It shows up every 25 minutes if it is time for a Pomodoro break or not. You can let this site open in your Browser or on your Mobile device, the status change works automatically. </p>
+        </div>
+        <div class="fourcol last">
+            <h3><img src="/img/icon-github.png" /> Open-Source</h3>
+            <p>Built for and maintained by the community via <a href="https://github.com/m83/isitpomodorobreak.com">GitHub</a>.<br />
+                You can also use the <a href="/api/">API Interface</a> to connect your personal display handler or hardware device like an <a href="http://arduino.cc/">Arduino</a>.</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
