--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -124,7 +124,11 @@ h2.no {
     }
 
     h1 {
-        font-size: 32px;
+        font-size: 24px;
+        line-height: 26px;
+        padding-left: 0;
+        padding-right: 0;
+        margin: 0;
     }
 
     h2 {
