mall text adaptions

--- a/views/index.twig
+++ b/views/index.twig
@@ -37,8 +37,8 @@
         </div>
         <div class="fourcol last">
             <h3><img src="/img/icon-github.png" /> Open-Source</h3>
-            <p>Built for and maintained by the community via <a href="https://github.com/m83/isitpomodorobreak.com">GitHub</a>.<br />
-                You can also use the <a href="/api/">API Interface</a> to connect your personal hardware device like an <a href="http://arduino.cc/">Arduino</a>.</p>
+            <p>Built for the community via <a href="https://github.com/m83/isitpomodorobreak.com">GitHub</a>.<br />
+                Use the <a href="/api/">API Interface</a> to connect your personal hardware device like  <a href="http://arduino.cc/">Arduino</a>, <a href="http://www.freeduino.org/">Freeduino</a> etc.</p>
         </div>
     </div>
 </div>
