remove unused css, add title to images

--- a/views/index.twig
+++ b/views/index.twig
@@ -27,16 +27,16 @@
 <div class="container">
     <div class="row">
         <div class="fourcol">
-            <h3><img src="/img/icon-pomodoro.png" /> The Pomodoro Technique</h3>
+            <h3><img src="/img/icon-pomodoro.png" alt="The Pomodoro Technique" title="The Pomodoro Technique" /> The Pomodoro Technique</h3>
             <p><a href="http://www.pomodorotechnique.com/">The Pomodoro Technique®</a> created by Francesco Cirillo in the 1980s is a way to get the most out of time management.
                 It is practiced by professional teams and individuals around the world.</p>
         </div>
         <div class="fourcol">
-            <h3><img src="/img/icon-about.png" /> About isitpomodorobreak.com</h3>
+            <h3><img src="/img/icon-about.png" alt="About isitpomodorobreak.com" title="About isitpomodorobreak.com"/> About isitpomodorobreak.com</h3>
             <p>It shows up every 25 minutes if it is time for a Pomodoro break or not. You can let this site open in your Browser or on your Mobile device, the status changes automatically. </p>
         </div>
         <div class="fourcol last">
-            <h3><img src="/img/icon-github.png" /> Open-Source</h3>
+            <h3><img src="/img/icon-github.png" alt="Open-source" title="Open-source" /> Open-Source</h3>
             <p>Built for the community via <a href="https://github.com/m83/isitpomodorobreak.com">GitHub</a>.<br />
                 Use the <a href="/api/">API Interface</a> to connect your personal hardware device like  <a href="http://arduino.cc/">Arduino</a>, <a href="http://www.freeduino.org/">Freeduino</a> etc.</p>
         </div>
@@ -47,10 +47,10 @@
         <div class="twelvecol last">
             <ul class="quick-links">
                 <li>
-                    <iframe class="github-btn" src="http://markdotto.github.com/github-buttons/github-btn.html?user=m83&amp;repo=isitpomodorobreak.com&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="112px" height="20px"></iframe>
+                    <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=m83&amp;repo=isitpomodorobreak.com&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="112px" height="20px"></iframe>
                 </li>
                 <li>
-                    <iframe class="github-btn" src="http://markdotto.github.com/github-buttons/github-btn.html?user=m83&amp;repo=isitpomodorobreak.com&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="98px" height="20px"></iframe>
+                    <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=m83&amp;repo=isitpomodorobreak.com&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="98px" height="20px"></iframe>
                 </li>
                 <li class="follow-btn">
                     <a href="https://twitter.com/mhauri" class="twitter-follow-button" data-show-count="true">Follow @mhauri</a>
