--- a/views/index.twig
+++ b/views/index.twig
@@ -47,10 +47,10 @@
         <div class="twelvecol last">
             <ul class="quick-links">
                 <li>
-                    <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=m83&amp;repo=isitpomodorobreak.com&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="112px" height="20px"></iframe>
+                    <iframe class="github-btn w112" src="http://markdotto.github.com/github-buttons/github-btn.html?user=m83&amp;repo=isitpomodorobreak.com&amp;type=watch&amp;count=true"></iframe>
                 </li>
                 <li>
-                    <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=m83&amp;repo=isitpomodorobreak.com&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="98px" height="20px"></iframe>
+                    <iframe class="github-btn w98" src="http://markdotto.github.com/github-buttons/github-btn.html?user=m83&amp;repo=isitpomodorobreak.com&amp;type=fork&amp;count=true"></iframe>
                 </li>
                 <li class="follow-btn">
                     <a href="https://twitter.com/mhauri" class="twitter-follow-button" data-show-count="true">Follow @mhauri</a>
