--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -15,7 +15,7 @@ h1 {
     font-family: 'Pinyon Script', cursive;
     color: #81ba5d;
     font-size: 60px;
-    font-weight: 900;
+    font-weight: 600;
     text-shadow: 1px 1px 1px #ddd;
     line-height: 60px;
     border-bottom: 3px dotted #ddd;
@@ -93,6 +93,18 @@ h2.no {
 .quick-links .follow-btn {
   position: relative;
   top: 5px;
+}
+
+.github-btn {
+    height: 20px;
+    border: 0;
+}
+.github-btn.w112 {
+    width: 112px;
+}
+
+.github-btn.w98 {
+    width: 98px;
 }
 
 /* ============================= */
