--- a/views/index.twig
+++ b/views/index.twig
@@ -64,6 +64,9 @@
                     <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://isitpomodorobreak.com" data-via="mhauri" data-lang="en">Tweet</a>
                     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
                 </li>
+                <li class="fb-btn">
+                    <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fisitpomodorobreak.com&amp;send=false&amp;layout=button_count&amp;width=112&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=arial&amp;height=21&amp;appId=228613170483428" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:112px; height:21px;" allowTransparency="true"></iframe>
+                </li>
             </ul>
         </div>
     </div>
