--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -90,6 +90,7 @@ h2.no {
 }
 .quick-links .github-btn,
 .quick-links .tweet-btn,
+.quick-links .fb-btn,
 .quick-links .follow-btn {
     position: relative;
     top: 5px;
@@ -141,6 +142,7 @@ h2.no {
         padding-left: 0;
         padding-right: 0;
         margin: 0;
+        text-shadow: none;
     }
 
     h2 {
@@ -158,6 +160,7 @@ h2.no {
 @media handheld, only screen and (max-width: 320px) {
     h1 {
         font-size: 28px;
+        text-shadow: none;
     }
 }
 
