remove title status

--- a/views/index.twig
+++ b/views/index.twig
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Is it Pomodoro break? {% if status == 'no' %}No, it isn't{% else %}Yes, it is!{% endif %}</title>
+    <title>Is it Pomodoro break?</title>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="robots" content="follow, all"/>
