--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -108,6 +108,10 @@ h2.no {
     width: 98px;
 }
 
+a:hover {
+    color: #81ba5d;
+}
+
 /* ============================= */
 /* ! Layout for mobile version   */
 /* ============================= */
