--- a/views/index.twig
+++ b/views/index.twig
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8" />
     <title>Is it Pomodoro break?</title>
@@ -34,7 +34,7 @@
         <div class="fourcol">
             <h3><img src="/img/icon-pomodoro.png" alt="The Pomodoro Technique" title="The Pomodoro Technique" /> The Pomodoro Technique</h3>
             <p><a href="http://www.pomodorotechnique.com/">The Pomodoro Technique®</a> created by Francesco Cirillo in the 1980s is a way to get the most out of time management.
-                It is practiced by professional teams and individuals around the world.</p>
+                It is practiced by professional teams and individuals around the world. <a href="http://www.pomodorotechnique.com/">Learn more about it</a>.</p>
         </div>
         <div class="fourcol">
             <h3><img src="/img/icon-about.png" alt="About isitpomodorobreak.com" title="About isitpomodorobreak.com"/> About isitpomodorobreak.com</h3>
