Trying to improve the english expressions in the footer.

--- a/views/index.twig
+++ b/views/index.twig
@@ -33,12 +33,12 @@
     <div class="row">
         <div class="fourcol">
             <h3><img src="/img/icon-pomodoro.png" alt="The Pomodoro Technique" title="The Pomodoro Technique" /> The Pomodoro Technique</h3>
-            <p><a href="http://www.pomodorotechnique.com/">The Pomodoro Technique®</a> created by Francesco Cirillo in the 1980s is a way to get the most out of time management.
+            <p><a href="http://www.pomodorotechnique.com/">The Pomodoro Technique®</a> created by Francesco Cirillo in the 1980s is a way to get the most out of your time.
                 It is practiced by professional teams and individuals around the world. <a href="http://www.pomodorotechnique.com/">Learn more about it</a>.</p>
         </div>
         <div class="fourcol">
             <h3><img src="/img/icon-about.png" alt="About isitpomodorobreak.com" title="About isitpomodorobreak.com"/> About isitpomodorobreak.com</h3>
-            <p>It shows up every 25 minutes if it is time for a Pomodoro break or not. You can let this site open in your Browser or on your Mobile device, the status changes automatically. </p>
+            <p>This page shows if the current 25 minutes are up and whether it is time for your next Pomodoro break. Leave it open in your browser or on your mobile device, the status will update automatically.</p>
         </div>
         <div class="fourcol last">
             <h3><img src="/img/icon-github.png" alt="Open-source" title="Open-source" /> Open-Source</h3>
